<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_name">your login name</string>
    <string name="login_password">your password</string>
    <string name="login_button">login</string>
    <string name="register_button">register</string>
    <string name="title_activity_register">Register</string>
    <string name="login_success">Hello,You Have Login Successfully</string>
    <string name="register_success">Hello,You have register successfully</string>
    <string name="title_activity_login_success">LoginSuccess</string>
    <string name="title_activity_register_success">RegisterSuccess</string>
    <string name="message_to">Email</string>
    <string name="message_subject">Subject</string>
    <string name="message_content">Content</string>
    <string name="message_phone">Phone</string>
    <string name="check_meat">Meat</string>
    <string name="check_cheese">Cheese</string>
    <string name="check_fruits">Fruits</string>
    <string name="pirates">Pirates</string>
    <string name="ninjas">Ninjas</string>
    <string name="pick_time">Time</string>
    <string name="pick_date">Date</string>
    <string name="CustomDialog">CustomDialog</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="menu_remove">Remove</string>
    <string name="content_open_popup">Open Popup Menu</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="intro_message">
<![CDATA[
            This sample shows you how to use {@link PopupMenu}
            from ActionBarCompat to create a list, with each item having a dropdown menu.
        ]]>
    </string>
    <string name="pref_syncConnectionTypes_default">Default Value</string>
    <string name="dialog_fire_missile">Fire Missile?</string>
    <string name="fire">Fire</string>
    <string name="cancle">Cancle</string>
    <string name="dialog_message">Dialog_Message</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="ok_button">Ok</string>
    <string name="multi_choice">Multi Choice</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_drag_and_drop">DragAndDrop</string>
    <string name="title_activity_copy_and_paste">CopyAndPaste</string>
    <string name="copy_message">your message</string>
    <string name="pasted_message">pasted message</string>
    <string name="title_activity_ime">ime</string>
    <string name="title_activity_show_animation">ShowAnimation</string>
    <string name="title_activity_search_acticity">SearchActicity</string>
    <string name="search_hint">This is login app</string>
    <string name="search_label">Search</string>
    <string name="title_activity_gson">Gson</string>
    <string name="single_gson_text">Single Gson Test</string>
    <string name="array_gson_text">Array Gson Test</string>
</resources>
