<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yangyang.loginapp.RegisterSuccess">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <CheckBox
            android:id="@+id/check_meat"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/check_meat"
            android:textAlignment="center"
            android:onClick="onCheckboxClicked"
            />

        <CheckBox
            android:id="@+id/check_cheese"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/check_cheese"
            android:onClick="onCheckboxClicked"
            />

        <CheckBox
            android:id="@+id/check_fruits"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/check_fruits"
            android:onClick="onCheckboxClicked"
            />

        </LinearLayout>

        <LinearLayout
            android:paddingTop="150dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton android:id="@+id/radio_pirates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pirates"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton android:id="@+id/radio_ninjas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ninjas"
                    android:layout_marginLeft="50dp"
                    android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>


</RelativeLayout>
