<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yangyang.loginapp.LoginSuccess">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/message_to"
            android:inputType="textEmailAddress|textCapWords"
            android:imeOptions="actionDone"
            />

        <EditText
            android:id="@+id/email_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/message_phone"
            android:inputType="phone"
            android:imeOptions="actionDone"
            />

        <EditText
            android:id="@+id/email_subject"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="text|textCapWords"
            android:imeOptions="actionDone"
            android:hint="@string/message_subject"/>

        <EditText
            android:id="@+id/email_content"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="240dp"
            android:imeOptions="actionSend"
            android:inputType="text|textMultiLine"
            android:hint="@string/message_content"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="100dp"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:text="Send"/>

    </LinearLayout>

</RelativeLayout>
